Last two components created
Services and contact have been created

--- a/Reforzamiento/src/app/app.component.html
+++ b/Reforzamiento/src/app/app.component.html
@@ -2,4 +2,7 @@
 <app-home></app-home>
 <app-services></app-services>
 <app-nosotros></app-nosotros>
+<app-proyectos></app-proyectos>
+<app-clients></app-clients>
+<app-contact></app-contact>
 <app-footer></app-footer>
