--- a/appHero/src/app/components/shared/navbar/navbar.component.html
+++ b/appHero/src/app/components/shared/navbar/navbar.component.html
@@ -11,15 +11,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLink="/home">
-        <a class="nav-link" >Home</a>
+        <a class="nav-link">Home</a>
       </li>
       <li class="nav-item" routerLink="/heroes">
-        <a class="nav-link" >Heroes</a>
+        <a class="nav-link">Heroes</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <div class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar heroe" aria-label="Search" #terminoHeroe
+        (keyup.enter)="EnviarTermino(terminoHeroe.value)">
+      <button (click)="EnviarTermino(terminoHeroe.value)" class="btn btn-outline-success my-2 my-sm-0"
+        type="button">Buscar</button>
+    </div>
   </div>
 </nav>
