--- a/RepazoRutas/src/app/components/shared/navbar/navbar.component.html
+++ b/RepazoRutas/src/app/components/shared/navbar/navbar.component.html
@@ -1,23 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand">Shopping site</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Products</a>
-        </li>
-      </ul> 
-      <div class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Buscar producto" aria-label="Search" #terminoHeroe>
-        <button class="btn btn-outline-success my-2 my-sm-0"
-          type="button">Buscar</button>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" routerLink="/home">Shopping site</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item" routerLink="products">
+        <a class="nav-link">Products</a>
+      </li>
+      <li class="nav-item" routerLink="about">
+        <a class="nav-link">About</a>
+      </li>
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Buscar producto" aria-label="Search" #ProductLook
+        (keyup.enter)="SendTerm(ProductLook.value)">
+      <button class="btn btn-outline-light my-2 my-sm-0" type="button" (click)="SendTerm(ProductLook.value)">Buscar</button>
     </div>
-  </nav>
+  </div>
+</nav>
